--- a/templates/mb-er-counter/package.json
+++ b/templates/mb-er-counter/package.json
@@ -1,16 +1,18 @@
 {
   "license": "ISC",
+  "type": "module",
   "scripts": {
-    "dev": "cd app && bun run dev",
-    "build:app": "cd app && bun run build",
-    "build:anchor": "./scripts/anchor-build.sh",
-    "test:anchor": "./scripts/anchor-test.sh",
-    "deploy:anchor": "./scripts/anchor-deploy.sh",
+    "frontend:dev": "cd app && bun run dev",
+    "frontend:build": "cd app && bun run build",
+    "program:build": "./scripts/anchor-build.sh",
+    "program:test": "sh ./scripts/anchor-test.sh",
+    "program:deploy": "sh ./scripts/anchor-deploy.sh",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.32.1"
+    "@coral-xyz/anchor": "^0.32.1",
+    "@magicblock-labs/ephemeral-rollups-sdk": "^0.6.5"
   },
   "devDependencies": {
     "chai": "^4.3.4",
