--- a/templates/mb-er-counter/programs/counter/Cargo.toml
+++ b/templates/mb-er-counter/programs/counter/Cargo.toml
@@ -23,6 +23,7 @@ custom-panic = []
 [dependencies]
 anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
 ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor"] }
+session-keys = { version = "3.0.10", features = ["no-entrypoint"] }
 
 
 [lints.rust]
