--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node dist/index.js",
-    "build": "bun build src/index.ts --target node --outdir dist"
+    "build": "bun build src/index.ts --target node --outdir dist",
+    "pub": "bun scripts/publish.ts"
   },
   "files": [
     "dist",
