--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,34 @@
-!/**/*/.gitignore
-!*/.gitignore
-!**/.gitignore
-!.gitignore
-!.npmignore
+# Ignore system files
+.DS_Store
+.git
+.github
+
+# Ignore build artifacts
+dist/
+dist
+target/
+**/target/
+build/
+**/build/
+DerivedData/
+
+# Ignore dependencies
+node_modules/
+**/node_modules/
+bun.lock
+yarn.lock
+package-lock.json
+pnpm-lock.yaml
+
+# Ignore local config
+.env
+.env.*
+
+# Ignore logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Do NOT ignore the renamed gitignore files
+!**/gitignore
