--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,6 +21,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          registry-url: "https://registry.npmjs.org"
+          
+      - name: Update npm
+        run: npm install -g npm@latest
 
       - name: Install dependencies
         run: bun install
@@ -29,4 +33,4 @@ jobs:
         run: bun run build
 
       - name: Publish to NPM
-        run: bun run pub --provenance
+        run: bun run pub
